.doing strict dtd checking for inlines in strict mode turns out to be  too optimistic. It breaks sites.

.no popBlock for dl/dt errors. It doesn't match what other browsers do.

BUG: 170650

svn path=/trunk/KDE/kdelibs/; revision=861054